@@ -6,6 +6,8 @@
 #include "stream/stringstream.h"
 #include "stream/textfilestream.h"
 
+#include <map>
+
 // this is very evil, but right now there is no better way
 #include "../../radiant/brush.h"
 
@@ -17,14 +19,14 @@
 class ExportData
 {
 public:
-	ExportData(const std::set<std::string>& ignorelist, collapsemode mode);
+	ExportData(const std::set<std::string>& ignorelist, collapsemode mode, bool limNames, bool objs);
 	virtual ~ExportData(void);
 	
 	virtual void BeginBrush(Brush& b);
 	virtual void AddBrushFace(Face& f);
 	virtual void EndBrush(void);
 	
-	virtual bool WriteToFile(const std::string& path) const = 0;
+	virtual bool WriteToFile(const std::string& path, collapsemode mode) const = 0;
 	
 protected:
 
@@ -48,7 +50,7 @@ private:
 	const std::set<std::string>& ignorelist;
 };
 
-ExportData::ExportData(const std::set<std::string>& _ignorelist, collapsemode _mode)
+ExportData::ExportData(const std::set<std::string>& _ignorelist, collapsemode _mode, bool _limNames, bool _objs)
 	:	mode(_mode),
 		ignorelist(_ignorelist)
 {
@@ -101,7 +103,7 @@ void ExportData::AddBrushFace(Face& f)
 	std::string shadername;
 	GetShaderNameFromShaderPath(f.GetShader(), shadername);
 	
-	// faces mit materials auf der ignoreliste ignorieren
+	// ignore faces from ignore list
 	if(ignorelist.find(shadername) != ignorelist.end())
 		return;
 		
@@ -145,8 +147,10 @@ void ExportData::GetShaderNameFromShaderPath(const char* path, std::string& name
 		name = path;
 	else
 		name = tmp.substr(last_slash + 1, tmp.length() - last_slash);
-		
-	globalOutputStream() << "Last: " << last_slash << " " << "lenght: " << (const unsigned int)tmp.length() << "Name: " << name.c_str() << "\n";
+
+#ifdef _DEBUG
+	globalOutputStream() << "Last: " << last_slash << " " << "length: " << (const unsigned int)tmp.length() << "Name: " << name.c_str() << "\n";
+#endif
 }
 
 /*
@@ -154,18 +158,31 @@ void ExportData::GetShaderNameFromShaderPath(const char* path, std::string& name
 */
 class ExportDataAsWavefront : public ExportData
 {
+private:
+	bool expmat;
+	bool limNames;
+	bool objs;
+
 public:
-	ExportDataAsWavefront(const std::set<std::string>& _ignorelist, collapsemode _mode)
-		: ExportData(_ignorelist, _mode)
+	ExportDataAsWavefront(const std::set<std::string>& _ignorelist, collapsemode _mode, bool _expmat, bool _limNames, bool _objs)
+		: ExportData(_ignorelist, _mode, _limNames, _objs)
 	{
+		expmat = _expmat;
+		limNames = _limNames;
+		objs = _objs;
 	}
 	
-	bool WriteToFile(const std::string& path) const;
+	bool WriteToFile(const std::string& path, collapsemode mode) const;
 };
 
-bool ExportDataAsWavefront::WriteToFile(const std::string& path) const
+bool ExportDataAsWavefront::WriteToFile(const std::string& path, collapsemode mode) const
 {
-	TextFileOutputStream out(path.c_str());
+	std::string objFile = path.substr(0, path.length() -4) + ".obj";
+	std::string mtlFile = path.substr(0, path.length() -4) + ".mtl";
+
+	std::set<std::string> materials;
+
+	TextFileOutputStream out(objFile.c_str());
 	
 	if(out.failed())
 	{
@@ -173,25 +190,49 @@ bool ExportDataAsWavefront::WriteToFile(const std::string& path) const
 		return false;
 	}
 		
-	out << "# Wavefront Objectfile exported with radiants brushexport plugin 2.0 by Thomas 'namespace' Nitschke, spam@codecreator.net\n\n";
+	out << "# Wavefront Objectfile exported with radiants brushexport plugin 3.0 by Thomas 'namespace' Nitschke, spam@codecreator.net\n\n";
+
+	if(expmat)
+	{
+		size_t last = mtlFile.find_last_of("//");
+		std::string mtllib = mtlFile.substr(last + 1, mtlFile.size() - last).c_str();
+		out << "mtllib " << mtllib.c_str() << "\n";
+	}
 	
 	unsigned int vertex_count = 0;
 
 	const std::list<ExportData::group>::const_iterator gend(groups.end());
 	for(std::list<ExportData::group>::const_iterator git(groups.begin()); git != gend; ++git)
 	{
+		typedef std::multimap<std::string, std::string> bm;
+		bm brushMaterials;
+		typedef std::pair<std::string, std::string> String_Pair;
+
 		const std::list<const Face*>::const_iterator end(git->faces.end());
 		
 		// submesh starts here
-		out << "\ng " << git->name.c_str() << "\n";
-		
+		if(objs)
+		{
+			out << "\no ";
+		} else {
+			out << "\ng ";
+		}
+		out << git->name.c_str() << "\n";
+
+		// material
+		if(expmat && mode == COLLAPSE_ALL)
+		{
+			out << "usemtl material" << "\n\n";
+			materials.insert("material");
+		}
+
 		for(std::list<const Face*>::const_iterator it(git->faces.begin()); it != end; ++it)
 		{
 			const Winding& w((*it)->getWinding());
 			
 			// vertices
 			for(size_t i = 0; i < w.numpoints; ++i)
-      				out << "v " << FloatFormat(w[i].vertex.x(), 1, 6) << " " << FloatFormat(w[i].vertex.y(), 1, 6) << " " << FloatFormat(w[i].vertex.z(), 1, 6) << "\n";
+					out << "v " << FloatFormat(w[i].vertex.x(), 1, 6) << " " << FloatFormat(w[i].vertex.z(), 1, 6) << " " << FloatFormat(w[i].vertex.y(), 1, 6) << "\n";
 		}
 		out << "\n";	
 		
@@ -209,13 +250,71 @@ bool ExportDataAsWavefront::WriteToFile(const std::string& path) const
 			const Winding& w((*it)->getWinding());
 			
 			// faces
-			out << "\nf";
+			StringOutputStream faceLine(256);
+			faceLine << "\nf";
 			for(size_t i = 0; i < w.numpoints; ++i, ++vertex_count)
 			{
-				out << " " << vertex_count+1 << "/" << vertex_count+1;
+				faceLine << " " << vertex_count+1 << "/" << vertex_count+1;
+			}
+
+			if(mode != COLLAPSE_ALL)
+			{
+				materials.insert((*it)->getShader().getShader());
+				brushMaterials.insert(String_Pair((*it)->getShader().getShader(), faceLine.c_str()));
+			} else {
+				out << faceLine.c_str();
 			}
 		}
+
+		if(mode != COLLAPSE_ALL)
+		{
+			std::string lastMat;
+			std::string mat;
+			std::string faces;
+
+			for(bm::iterator iter = brushMaterials.begin(); iter != brushMaterials.end(); iter++)
+			{
+				mat = (*iter).first.c_str();
+				faces = (*iter).second.c_str();
+
+				if(mat != lastMat)
+				{
+					if(limNames && mat.size() > 20)
+					{
+						out << "\nusemtl " << mat.substr(mat.size() - 20, mat.size()).c_str();
+					} else {
+						out << "\nusemtl " << mat.c_str();
+					}
+				}
+
+				out << faces.c_str();
+				lastMat = mat;
+			}
+		}
+
 		out << "\n";
+	}
+
+	if(expmat)
+	{
+		TextFileOutputStream outMtl(mtlFile.c_str());
+		if(outMtl.failed())
+		{
+			globalErrorStream() << "Unable to open material file\n";
+			return false;
+		}
+
+		outMtl << "# Wavefront material file exported with GtkRadiants brushexport plugin.\n";
+		outMtl << "# Material Count: " << (const Unsigned)materials.size() << "\n\n";
+		for(std::set<std::string>::const_iterator it(materials.begin()); it != materials.end(); ++it)
+		{
+			if(limNames && it->size() > 20)
+			{
+				outMtl << "newmtl " << it->substr(it->size() - 20, it->size()).c_str() << "\n";
+			} else {
+				outMtl << "newmtl " << it->c_str() << "\n";
+			}
+		}
 	}
 	
 	return true;
@@ -263,12 +362,12 @@ private:
 	ExportData& exporter;
 };
  
-bool ExportSelection(const std::set<std::string>& ignorelist, collapsemode m, const std::string& path)
+bool ExportSelection(const std::set<std::string>& ignorelist, collapsemode m, bool exmat, const std::string& path, bool limNames, bool objs)
 {
-	ExportDataAsWavefront exporter(ignorelist, m);
+	ExportDataAsWavefront exporter(ignorelist, m, exmat, limNames, objs);
 	
 	ForEachSelected vis(exporter);
 	GlobalSelectionSystem().foreachSelected(vis);
 	
-	return exporter.WriteToFile(path);
+	return exporter.WriteToFile(path, m);
 }
